--- a/Action_LOG_TASK_NAN/messages_en.properties
+++ b/Action_LOG_TASK_NAN/messages_en.properties
@@ -7028,6 +7028,7 @@ actionLogUserlist.actionLogKey=Action Logs
 actionLogUserlist.viewAll=View All
 actionLogUserlist.viewDetails=View Details
 actionLogUserlist.users=Action Log(s)
+actionLogUserlist.userLogsList=User Logs List
 actionLogSessionlist.userDetails = User Details
 
 
@@ -7058,6 +7059,7 @@ actionLogSessionlist.logout=Logout Time (HMS)
 actionLogSessionlist.duration=Duration (HMS)
 actionLogSessionlist.viewActions=View Actions
 actionLogSessionlist.viewDetails =View Details
+actionLogSessionlist.userSessionLogsList = User Session Logs List
 #actionLogSessionlist.viewDetails =View Button
 
 
@@ -7091,5 +7093,5 @@ actionLogSummaryList.viewActions=View Actions
 actionLogSummaryList.duration =Duration (HMS)
 actionLogSummaryList.login=Login Time :
 actionLogSummaryList.logout=Logout Time :
-
+actionLogSummaryList.userActivityLogsList = User Activity Logs List
 ## END BR 25028
